--- a/src/main/resources/licenses/licenses.html
+++ b/src/main/resources/licenses/licenses.html
@@ -603,7 +603,21 @@
 </td>
 </tr>
 <tr>
+<td>org.apache</td><td>apache</td><td>15.0.0.redhat-1</td><td><a href="http://www.apache.org/licenses/LICENSE-2.0.txt">Apache Software License, Version 2.0</a>
+<br>
+</td><td><a href="content/apache software license, version 2.0 - license-2.0.txt">apache software license, version 2.0 - license-2.0.txt</a>
+<br>
+</td>
+</tr>
+<tr>
 <td>org.apache.commons</td><td>commons-lang3</td><td>3.1</td><td><a href="http://www.apache.org/licenses/LICENSE-2.0.txt">Apache Software License, Version 2.0</a>
+<br>
+</td><td><a href="content/apache software license, version 2.0 - license-2.0.txt">apache software license, version 2.0 - license-2.0.txt</a>
+<br>
+</td>
+</tr>
+<tr>
+<td>org.apache.commons</td><td>commons-parent</td><td>35.0.0.redhat-2</td><td><a href="http://www.apache.org/licenses/LICENSE-2.0.txt">Apache Software License, Version 2.0</a>
 <br>
 </td><td><a href="content/apache software license, version 2.0 - license-2.0.txt">apache software license, version 2.0 - license-2.0.txt</a>
 <br>
@@ -855,6 +869,13 @@
 </td>
 </tr>
 <tr>
+<td>org.hibernate</td><td>hibernate-validator-parent</td><td>5.2.4.Final-redhat-1</td><td><a href="http://www.apache.org/licenses/LICENSE-2.0.txt">Apache Software License, Version 2.0</a>
+<br>
+</td><td><a href="content/apache software license, version 2.0 - license-2.0.txt">apache software license, version 2.0 - license-2.0.txt</a>
+<br>
+</td>
+</tr>
+<tr>
 <td>org.hibernate.javax.persistence</td><td>hibernate-jpa-2.1-api</td><td>1.0.0.Final</td><td><a href="http://www.eclipse.org/legal/epl-v10.html">Eclipse Public License, Version 1.0</a>
 <br>
 <a href="http://www.eclipse.org/org/documents/edl-v10.html">Eclipse Distribution License, Version 1.0</a>
@@ -884,6 +905,13 @@
 <td>org.jboss</td><td>jandex</td><td>2.0.0.Final</td><td><a href="http://www.apache.org/licenses/LICENSE-2.0.txt">Apache Software License, Version 2.0</a>
 <br>
 </td><td><a href="content/apache software license, version 2.0 - license-2.0.txt">apache software license, version 2.0 - license-2.0.txt</a>
+<br>
+</td>
+</tr>
+<tr>
+<td>org.jboss</td><td>jboss-parent</td><td>19.0.0.redhat-2</td><td><a href="http://repository.jboss.org/licenses/cc0-1.0.txt">Public Domain</a>
+<br>
+</td><td><a href="content/public domain - cc0-1.0.txt">public domain - cc0-1.0.txt</a>
 <br>
 </td>
 </tr>
